Fix for vertical alignment of repository logos

--- a/css/main.css
+++ b/css/main.css
@@ -148,9 +148,7 @@ section#intro {
   margin-bottom: 60px;
 }
 
-#repos .repo img {
-  max-width: 200px;
-}
+
 
 #repos p.call_to_action {
   margin-top: 0px;
@@ -159,11 +157,26 @@ section#intro {
 .repo {
   margin-bottom: 40px;
   min-height: 200px;
+  position: relative;
 }
 
-  .repo:last-of-type {
-    margin-bottom: 0px;
-  }
+#repos .repo img {
+  /*max-width: 200px;*/
+  max-height: 100%;  
+  max-width: 200px; /*100%; */
+  width: auto;
+  height: auto;
+  position: absolute;  
+  top: 0;  
+  bottom: 0;  
+  left: 0;  
+  right: 0;  
+  margin: auto;
+}
+
+.repo:last-of-type {
+  margin-bottom: 0px;
+}
 
 
 
